--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -12,12 +12,12 @@
                 android:startX="42.9492"
                 android:startY="49.59793"
                 android:type="linear">
-                <item
+  <!--              <item
                     android:color="#44000000"
-                    android:offset="0.0" />
+                    android:com.example.mycomposeskeleton.animation.`offset$delegate`="0.0" />
                 <item
                     android:color="#00000000"
-                    android:offset="1.0" />
+                    android:com.example.mycomposeskeleton.animation.`offset$delegate`="1.0" />-->
             </gradient>
         </aapt:attr>
     </path>
